<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blur effect for Android Design</string>
    <string name="empty"></string>
     <string name="hint_text">Search Catalog</string>
    <string name="empty"></string>
    <string name="descr_search">Search</string>
    <string name="descr_logo">UCLA Library</string>
    <string name="descr_separator"></string>
    <string name="descr_info">Info</string>
    <string name="descr_cover">Book Cover</string>
    <string name="main_cr">Course Reserves</string>
    <string name="main_hours">Hours</string>
    <string name="main_laptop">Laptop Availability</string>
    <string name="main_contact">Contact</string>
    <string name="main_feedback">Feedback</string>
    <string name="main_credits">Credits</string>
    <string name="main_article">Article Search</string>
    <string name="main_top101">Top 101 Checkouts</string>
    <string name="result_keyword">Keyword</string>
    <string name="result_title">Title</string>
    <string name="result_author">Author</string>
    <string name="result_subject">Subject</string>
    <string name="bkrd_descript">DESCRIPTION</string>
    <string name="bkrd_avail">AVAILABILITY</string>
    <string name="bkrd_goodreads">0 GOODREADS REVIEWS</string>
    <string name="cr_dept">Department</string>
    <string name="cr_course_no">Course #</string>
    <string name="loading">Loading…</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="item_one">Menu Item One</string>
    <string name="item_two">Menu Item Two</string>
    <string name="item_three">Menu Item Three</string>
    <string name="item_four">Menu Item Four</string>
        <string name="action_settings">Settings</string>
</resources>
