<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/bkheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bruin_blue" >

        <ImageButton
            android:id="@+id/actionbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bruin_blue"
            android:contentDescription="@string/descr_logo"
            android:gravity="left"
            android:src="@drawable/menu_states" />

        <ImageButton
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/actionbar"
            android:background="@color/bruin_blue"
            android:contentDescription="@string/descr_logo"
            android:src="@drawable/ucla_header" />

        <ImageButton
            android:id="@+id/clearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/actionbar"
            android:background="@color/bruin_blue"
            android:src="@drawable/clear_text"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/searchBar"
            style="@style/EditTextHoloDark"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/searchIconBtn"
            android:layout_toRightOf="@+id/clearText"
            android:gravity="right"
            android:hint="@string/hint_text"
            android:paddingLeft="17dp"
            android:singleLine="True"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/searchIconBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/bruin_blue"
            android:contentDescription="@string/descr_search"
            android:gravity="right"
            android:onClick="OnSearchButtonClick"
            android:paddingBottom="3dp"
            android:paddingRight="17dp"
            android:paddingTop="3dp"
            android:src="@drawable/search_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/library_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/bookinfotop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/bookInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:maxLines="5"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bookAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="@color/light_gray"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/bookYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="@color/dark_gray"
                    android:textSize="14dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right"
                android:layout_weight="3"
                android:contentDescription="@string/descr_cover"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookRecordBottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookinfotop"
            android:orientation="vertical"
            android:padding="7dp" >

            <ScrollView
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/bkrd_descript"
                        android:textColor="@color/navy"
                        android:textSize="@dimen/bkrd_hdr"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/navy"
                        android:gravity="left"
                        android:text="@string/empty"
                        android:textSize="1dp" />

                    <TableLayout
                        android:id="@+id/description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/bkrd_table_margin"
                        android:shrinkColumns="0"
                        android:stretchColumns="0" />

               

                

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        
                    </LinearLayout>

                    

                  

                   

                    

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>